# pyBASTION

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  tests.yml
notebooks/: _test.ipynb  example_airtraffic.ipynb  example_electricity.ipynb  example_simulated.ipynb  figure_airtraffic.ipynb  figure_electricity.ipynb  figure_simulated.ipynb
pybastion/: __init__.py  _evol_params.py  _mcmc.py  _obs_error.py  _outlier.py  _regression.py  _seasonality.py  _summary.py  _trend.py  _utils.py  datasets.py  evol_params.py  mcmc.py  model.py  obs_error.py  outlier.py  regression.py  seasonality.py  trend.py  utils.py
pybastion/data/: NYelectricity.csv  airtraffic.csv
pybastion/datasets/: __init__.py
tests/: test_bastion.py
